[gd_scene load_steps=165 format=2]

[ext_resource path="res://assets/gameplay/player/death.png" type="Texture" id=1]
[ext_resource path="res://assets/gameplay/player/walk.png" type="Texture" id=2]
[ext_resource path="res://assets/gameplay/player/Idle.png" type="Texture" id=3]
[ext_resource path="res://assets/gameplay/player/Dash.png" type="Texture" id=4]
[ext_resource path="res://src/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/gameplay/player/USSR.png" type="Texture" id=6]
[ext_resource path="res://assets/light (1).png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 48, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 96, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 144, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 240, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 288, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 336, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 144, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 240, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 288, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 336, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 48, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 96, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 144, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 192, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 240, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 288, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 336, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 48, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 96, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 144, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 192, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 240, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 288, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 336, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 3 )
region = Rect2( 48, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 3 )
region = Rect2( 144, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 3 )
region = Rect2( 240, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 3 )
region = Rect2( 288, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 3 )
region = Rect2( 336, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 3 )
region = Rect2( 48, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 3 )
region = Rect2( 144, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 3 )
region = Rect2( 192, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 3 )
region = Rect2( 240, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 3 )
region = Rect2( 288, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 3 )
region = Rect2( 336, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 48, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 144, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 240, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 288, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 336, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 48, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 96, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 144, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 192, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 240, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 288, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 336, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 48, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 96, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 2 )
region = Rect2( 144, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 2 )
region = Rect2( 192, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 2 )
region = Rect2( 240, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 288, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 336, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 48, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 96, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 144, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 192, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 240, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 288, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 336, 320, 48, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 48, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 144, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 240, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 288, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 336, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 48, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 144, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 240, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 288, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 336, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 48, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 144, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 240, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 288, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 2 )
region = Rect2( 336, 128, 48, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 144, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 240, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 288, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 336, 192, 48, 64 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 48, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 96, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 144, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 240, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 288, 256, 48, 64 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 336, 256, 48, 64 )

[sub_resource type="SpriteFrames" id=113]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "dash-back",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "dash-front",
"speed": 6.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "dash-left",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "dash-right",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle-back",
"speed": 5.0
}, {
"frames": [ SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ) ],
"loop": true,
"name": "idle-backLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ) ],
"loop": true,
"name": "idle-backRight",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "idle-front",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "idle-left",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "idle-right",
"speed": 5.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ) ],
"loop": true,
"name": "walk0",
"speed": 5.0
}, {
"frames": [ SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ) ],
"loop": true,
"name": "walk1",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ) ],
"loop": true,
"name": "walk2",
"speed": 5.0
}, {
"frames": [ SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "walk3",
"speed": 5.0
}, {
"frames": [ SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ) ],
"loop": true,
"name": "walk4",
"speed": 5.0
}, {
"frames": [ SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "walk5",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "walk6",
"speed": 5.0
}, {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "walk7",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=114]
extents = Vector2( 15.5, 24.5 )

[sub_resource type="RectangleShape2D" id=163]
extents = Vector2( 21, 29 )

[sub_resource type="Animation" id=164]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=165]
resource_name = "reloading"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.9, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -15 ), Vector2( 6, -15 ), Vector2( 1, -15 ), Vector2( 1, -11 ), Vector2( 1, -15 ), Vector2( 6, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.9, -41.8, -10.5, 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -24.5 )
scale = Vector2( 2.58333, 2.20313 )
frames = SubResource( 113 )
animation = "idle-front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.5, -24.5 )
shape = SubResource( 114 )

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 6, -15 )
scale = Vector2( 1.60882, 1.5655 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 68.9617, 1.43479, 28.0882, 13.1724 )

[node name="FirePoint" type="Position2D" parent="GunSprite"]
position = Vector2( 14.2962, -1.91632 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 11, -15 )
scale = Vector2( 0.598144, 0.551758 )
texture = ExtResource( 7 )
texture_scale = 1.6
energy = 1.2
shadow_enabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 33

[node name="HurtBox" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 6, -25 )
shape = SubResource( 163 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 164 )
anims/reloading = SubResource( 165 )

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
